# z

./: .gitignore  Cargo.toml  README.md
docs/: 01 技术选择清单.md  02 功能列表与优先级.md  03 ARCHITECTURE.md  04 编辑器数据流规范.md  05 PieceTable文档.md  06 PieceTable完整实现.md  06 zedit 分阶段开发路线图.md  07 PieceTable待优化改进.md  08 Edit_Transaction - 编辑事务系统设计文档.md  09 Edit_Transaction - 编辑事务系统完整实现.md  10 Viewport系统架构设计文档.md  11 Viewport系统代码实现.md  12 ViewModel系统架构设计文档.md  13 ViewModel完整代码实现.md  14 layout系统设计文档.md  15 Layout系统的完整实现.md  16 Render System 设计文档.md  17 Render System 完整实现代码.md  18 Editor Core 文档.md  19 Editor Core 完整实现代码.md  20 Input System 文档.md  21 Action System 文档.md  22 Action System 完成实现代码.md  23 Application Framework 文档.md  24 IO System 文档.md  PROJECT_STATUS.md  Slint Canvas.md  Slint UI相关修改文档.txt  Slint事件处理.md
src/: lib.rs  main.rs
src/action/: mod.rs
src/app/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/buffer/: chunk_iter.rs  deletion_info.rs  lines.rs  mmap.rs  mod.rs  mode.rs  piece_table.rs  utf8.rs
src/input/: mod.rs
src/io/: mod.rs
src/layout/: mod.rs
src/render/: mod.rs
src/search/: mod.rs
src/syntax/: mod.rs
src/theme/: mod.rs
src/viewmodel/: mod.rs
src/viewport/: mod.rs
tests/integration/: piece_table_integration_tests.rs
tests/unit/: piece_table_tests.rs
